--- a/README
+++ b/README
@@ -6,10 +6,10 @@ via the libvirt library.
 
 The front end of the application uses the PyGTK / Glade libraries for
 all user interaction components. The back end uses libvirt for managing
-Xen virtual machines. Although primarily tested with Xen, the UI code is
-intended to be portable to any virtualization backend libvirt supports. So
-when libvirt is ported to QEMU / UML / VmWare the UI should not require
-any significant changes to deal with these technologies.
+Xen, QEMU & KVM virtual machines. The UI is primarily tested with Xen
+and QEMU, but is intended to be portable to any virtualization backend 
+libvirt supports. So when libvirt is ported to UML / VmWare / etc the 
+UI should not require any significant changes to deal with these drivers.
 
 Terminology
 -----------
@@ -28,13 +28,13 @@ please report any success to the mailing lists
  python  >= 2.4
  pygtk2 >= 1.99.12-6
  gnome-python2-gconf >= 1.99.11-7
- libvirt-python >= 0.1.11
+ libvirt-python >= 0.2.0
  dbus-python >= 0.61
  gnome-keyring >= 0.4.9
  gnome-python-desktop >= 2.15.4
  libxml2-python >= 2.6.23
  vte >= 0.12.2
- python-virtinst >= 0.100.0
+ python-virtinst >= 0.101.0
 
 The latter is available from
 
