Add sensible options to right-click menu in manager window. Thanks to Mark Cave-Ayland <mark.cave-ayland-at-ilande-dot-co-dot-uk>.

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,7 +18,7 @@ Further patches have been submitted by:
   Karel Zak <kzak-at-redhat-dot-com>
   Damien Durand <splinux25-at-gmail-dot-com>
   Charles Coffing <ccoffing-at-novell-dot-com>
-
+  Mark Cave-Ayland <mark.cave-ayland-at-ilande-dot-co-dot-uk>
 
   <...send a patch & get your name here...>
 
