--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,15 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.3.2
+-------------
+
+The release introduces online help for all windows / dialogs in the
+application, to explain usage & operation of key functions. Auto-popup
+of consoles was fixed for existing inactive domains. Additional control
+operations are available on the right-click menu in the VM list. A 
+handful of other minor bug fixes are also applied.
+
 Release 0.3.1
 -------------
 
