Added an error dialog with expandable 'details' pane. Use this from connection error code. Patch from Richard Jones

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,7 @@ Further patches have been submitted by:
   Damien Durand <splinux25-at-gmail-dot-com>
   Charles Coffing <ccoffing-at-novell-dot-com>
   Mark Cave-Ayland <mark.cave-ayland-at-ilande-dot-co-dot-uk>
+  Richard W.M. Jones <rjones-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
